aðeins að gera við

--- a/app/views/event/my_events.html.erb
+++ b/app/views/event/my_events.html.erb
@@ -37,7 +37,7 @@
               <h5 id="eventdata" ><%= format_date(event.date) %></h5>
             </div>
             <div class="col-md-6">
-              <label>Music type : </label>
+              <h5 id="eventgenres" >Music type : </h5>
               <p id="eventgenres" ><%= event.musicgenres %></p>
             </div>
 
