--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -65,10 +65,6 @@ h5{
     font-size: 16px
 }
 
-.event #eventdescription{
-    min-height: 140px;
-}
-
 .event #eventtime{
     display: inline;
     margin-right: 10px;
@@ -85,8 +81,7 @@ h5{
 #imgEvent{
     position: absolute;
     display: block;
-    max-height: 100%;
-    max-width: 100%;
+    height: 100%;
     left: 0px;
     right: 0px;
     top: 0px;
@@ -102,6 +97,7 @@ h5{
     padding-top: 56.25%;
     overflow: hidden;
     width: 100%;
+    min-height: 175px;
 }
 
 
